# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  chip8.c  chip8.h  instruction.c  instruction.h
include/: chip8.h
src/: chip8.c  instruction.c
